--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -12,7 +12,7 @@ on:
       - main
 
 jobs: 
-  update-and-downoad:
+  update-and-download:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -21,7 +21,7 @@ jobs:
     - name: Get list of updated savedFilter files
       id: list-files
       run: |
-        changed_files=$(git diff-tree --no-comit-id --name-only -r ${{ github.sha }} | grep "^savedFilter/.*\.ya?ml$")
+        export changed_files=$(git diff-tree --no-comit-id --name-only -r ${{ github.sha }} | grep "^savedFilter/.*\.ya?ml$")
         echo "::set-output name=files::$changed_files"
     
     - name: Setup Python
