--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Get list of updated savedFilter files
       id: list-files
       run: |
-        export changed_files=$(git diff-tree --no-comit-id --name-only -r ${{ github.sha }} | grep "^savedFilter/.*\.ya?ml$")
+        export changed_files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep "^savedFilter/.*\.ya?ml$")
         echo "::set-output name=files::$changed_files"
     
     - name: Setup Python
