--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -22,7 +22,7 @@ jobs:
       id: list-files
       run: |
         export changed_files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep "^savedFilter/.*\.ya?ml$")
-        echo "::set-output name=files::$changed_files"
+        echo "files=$changed_files" >> $GITHUB_OUTPUT
     
     - name: Setup Python
       uses: actions/setup-python@v2
