add log to get list of files step

--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Get list of updated savedFilter files
       id: list-files
       run: |
+        echo "the current commit is ${{ github.sha }}"
         export changed_files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep -E "^savedFilters/.*\.ya?ml$")
         echo "files=$changed_files" >> $GITHUB_OUTPUT
     
