--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Get list of updated savedFilter files
       id: list-files
       run: |
-        echo "the current commit is ${{ github.sha }}"
         export changed_files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep -E "^savedFilters/.*\.ya?ml$")
         echo "files=$changed_files" >> $GITHUB_OUTPUT
+        echo "${changed_files}"
     
     - name: Setup Python
       uses: actions/setup-python@v2
