--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -23,7 +23,7 @@ jobs:
       run: |
         export changed_files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep -E "^savedFilters/.*\.ya?ml$")
         echo "files=$changed_files" >> $GITHUB_OUTPUT
-        echo "List of files is {$changed_files}"
+        echo "List of files is $changed_files"
     
     - name: Setup Python
       uses: actions/setup-python@v2
