Remove unused regex

--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -21,10 +21,11 @@ jobs:
     - name: Get list of updated savedFilter files
       id: list-files
       run: |
-        export changed_files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | sed 's/^[ \t]*//' | tr -d '\n' | grep -E "^savedFilters/.*\.ya?ml$")
+        export current
+        export changed_files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }}")
         echo "current commit is ${{github.sha}}"
         echo "List of files is $(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
-        echo "changed files"
+        echo "changed files: $changed_files"
         echo "files=$changed_files" >> $GITHUB_OUTPUT
     
     - name: Setup Python
