--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Get list of updated savedFilter files
       id: list-files
       run: |
-        export current
+        export current_commit=github.sha
         export changed_files=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }}")
         echo "current commit is ${{github.sha}}"
         echo "List of files is $(git diff-tree --no-commit-id --name-only -r ${{ github.sha }})"
