Remove hello-commit workflow and add new stage to the update-yaml

--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -40,7 +40,10 @@ jobs:
         python update-yaml.py
       working-directory: ${{ github.workspace }}
     
-    - name: Get Updated files
-      run: echo ${{ steps.update_yaml.outputs.downloaded_files }}
+    - name: Build and upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: build-artifact
+        path: ./artifacts
 
 
