--- a/.github/workflows/update-yaml.yml
+++ b/.github/workflows/update-yaml.yml
@@ -48,6 +48,11 @@ jobs:
       with:
         name: updated-yaml
         path: ./savedFilters/*
+    - name: Download artifacts
+      uses: action/download-artifact@v2
+      with:
+        name: updated-yaml
+        path: ./artifacts
 
 
 
